move header files
header files in a non-library project should usually be in src/
but its kinda hard to read when there's a source and header file for each
module, so i moved the header files to include/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,5 @@ add_executable(camshell src/evaluate.c
         src/main.c
         src/parse.c
         src/command.c src/builtin.c)
-target_include_directories(camshell PRIVATE src/)
+target_include_directories(camshell PRIVATE include/)
 target_link_libraries(camshell PRIVATE cam)
