add job data structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ add_subdirectory(deps/LibCam)
 add_executable(camshell src/evaluate.c
         src/main.c
         src/parse.c
-        src/command.c src/builtin.c)
+        src/command.c src/builtin.c src/jobs.c include/jobs.h)
 target_include_directories(camshell PRIVATE include/)
 target_link_libraries(camshell PRIVATE cam)
