update readme, update binary name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
-project(camshell C)
+project(cash C)
 
 add_subdirectory(deps/LibCam)
 
-add_executable(camshell src/evaluate.c
+add_executable(cash src/evaluate.c
         src/main.c
         src/parse.c
         src/command.c
@@ -11,5 +11,5 @@ add_executable(camshell src/evaluate.c
         src/jobs.c
         src/signals.c)
 
-target_include_directories(camshell PRIVATE include/)
-target_link_libraries(camshell PRIVATE cam)
+target_include_directories(cash PRIVATE include/)
+target_link_libraries(cash PRIVATE cam)
